--- a/src/app/shared/layout/modals/account-verification-onboarding/account-verification-onboarding.component.html
+++ b/src/app/shared/layout/modals/account-verification-onboarding/account-verification-onboarding.component.html
@@ -3,9 +3,20 @@
         <app-account-verification-step-bar [steps]="verifiedSteps"/>
     </div>
     <div class="account-verification-onboarding__body">
-        <app-account-verification-phone-step *ngIf="showPhoneStep" (toAdvance)="toAdvance()" />
-        <app-account-verification-email-step *ngIf="showEmailStep" (toAdvance)="toAdvance()" />
-        <app-account-verification-document-step *ngIf="showDocumentStep" (toAdvance)="toAdvance()" />
+       
+        <app-account-verification-email-or-phone-step
+            *ngIf="showPhoneStep"
+            verificationType="phone"
+            [verificationPosition]="stepPosition"
+            (onAdvance)="toAdvance()"
+        />
+        <app-account-verification-email-or-phone-step
+            *ngIf="showEmailStep"
+            verificationType="email"
+            [verificationPosition]="stepPosition"
+            (onAdvance)="toAdvance()"
+        />
+        <app-account-verification-document-step *ngIf="showDocumentStep" (onAdvance)="toAdvance()" />
     </div>
     <div class="account-verification-onboarding__footer">
         <button
