--- a/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.css
+++ b/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.css
@@ -272,6 +272,20 @@ hr {
     .teams-container {
         width: auto;
     }
+    #teams-names {
+        display: flex;
+        flex: initial !important;
+    }
+    #teams-names > .nome {
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        line-height: 1.4em;
+        max-height: calc(1.4em * 2);
+    }
     #game-status {
         margin-right: 0px !important;
     }
@@ -371,8 +385,11 @@ hr {
     .horario {
         font-size: 12px !important;
     }
-    .campeonato .info-cupom {
+    p.campeonato.info-cupom {
         font-size: 12px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
     .footer-container > .cupom > .item > p {
         margin: 0;
