--- a/src/app/shared/layout/modals/bet-sharing-modal/bet-sharing-modal.component.css
+++ b/src/app/shared/layout/modals/bet-sharing-modal/bet-sharing-modal.component.css
@@ -200,6 +200,17 @@ hr {
         margin-left: 0;
         width: auto;
     }
+    #teams-names > .nome {
+        margin-left: 18px;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        line-height: 1.4em;
+        max-height: calc(1.4em * 2);
+    }
     #game-status {
         margin-right: 0px;
     }
@@ -228,11 +239,10 @@ hr {
          flex: 1;
      }
      #game-status {
-         text-align: right;
-         margin-left: auto;
-         width: 100%;
-         margin-right: 18px;
-     }
+        display: flex;
+        justify-content: end;
+        margin-right: 18px;
+    }
     .jogo-resultado {
         margin: 0 !important;
         padding: 0 !important;
@@ -265,8 +275,11 @@ hr {
     .horario {
         font-size: 12px !important;
     }
-    .campeonato .info-cupom {
+    p.campeonato.info-cupom {
         font-size: 12px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
  }
 
