style: update text color for game result in bet-sharing modal

--- a/src/app/shared/layout/modals/bet-sharing-modal/bet-sharing-modal.component.html
+++ b/src/app/shared/layout/modals/bet-sharing-modal/bet-sharing-modal.component.html
@@ -86,7 +86,7 @@
                         </td>
                         <td class="item border-right" id="td-result">
                             <div style="display: flex; justify-content: center;">
-                                <p class="jogo-resultado" style="float:right" *ngIf="item.encerrado && !item.removido; else resultado">
+                                <p class="jogo-resultado" style="float:right; color: var(--foreground-game);" *ngIf="item.encerrado && !item.removido; else resultado">
                                     ENCERRADO <br />
                                     <span [ngClass]="getBetResultClasses(item)">
                                         <ng-container *ngIf="item.resultado !== null && item.resultado !== undefined">
