--- a/src/app/shared/layout/modals/account-verification-onboarding/parts/account-verification-document-step/account-verification-document-step.component.html
+++ b/src/app/shared/layout/modals/account-verification-onboarding/parts/account-verification-document-step/account-verification-document-step.component.html
@@ -1,1 +1,15 @@
-<p>account-verification-document-step works!</p>
+<div class="account-verification-document-step" style="display: none;">
+    <div #legitimuz id="legitimuz" *ngIf="faceMatchType == 'legitimuz'">
+            <input id="legitimuz-hydrate-cpf" [value]="dataUserCPF"/>
+            <button id="legitimuz-action-verify"></button>
+            <div id="legitimuz-root"></div>
+    </div>
+    <div #docCheck id="docCheck" *ngIf="faceMatchType == 'docCheck'">
+        <button 
+            id="exDocCheckAction"
+            [attr.data-ex-doccheck-document]="dataUserCPF"
+            [attr.data-ex-doccheck-document-hmac-hash]="secretHash"
+            [attr.data-ex-doccheck-force-enrollment]="false">
+        </button>
+    </div>
+</div>
