--- a/src/app/shared/layout/modals/account-verified-address/account-verified-address.component.html
+++ b/src/app/shared/layout/modals/account-verified-address/account-verified-address.component.html
@@ -1,17 +1,9 @@
 <div class="account-verified-address">
     <div class="account-verified-address__header">
         <span class="account-verified-address__icon">
-            <svg width="64" height="80" viewBox="0 0 64 65" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <rect x="4" y="4.5" width="56" height="56" rx="28" stroke="#0BE68D" stroke-opacity="0" stroke-width="8"/>
-                  <g transform="scale(2.0)" transform-origin="32px 32.5px">
-                    <path d="M32 46.5C24.2678 46.5 18 40.2322 18 32.5C18 24.7678 24.2678 18.5 32 18.5C39.7322 18.5 46 24.7678 46 32.5C46 40.2322 39.7322 46.5 32 46.5ZM32 43.7C34.9704 43.7 37.8192 42.52 39.9196 40.4196C42.02 38.3192 43.2 35.4704 43.2 32.5C43.2 29.5296 42.02 26.6808 39.9196 24.5804C37.8192 22.48 34.9704 21.3 32 21.3C29.0296 21.3 26.1808 22.48 24.0804 24.5804C21.98 26.6808 20.8 29.5296 20.8 32.5C20.8 35.4704 21.98 38.3192 24.0804 40.4196C26.1808 42.52 29.0296 43.7 32 43.7Z" fill="#0BE68D"/>
-                    <path d="M32 25.5C32.3713 25.5 32.7274 25.6475 32.9899 25.9101C33.2525 26.1726 33.4 26.5287 33.4 26.9V33.9C33.4 34.2713 33.2525 34.6274 32.9899 34.8899C32.7274 35.1525 32.3713 35.3 32 35.3C31.6287 35.3 31.2726 35.1525 31.0101 34.8899C30.7475 34.6274 30.6 34.2713 30.6 33.9V26.9C30.6 26.5287 30.7475 26.1726 31.0101 25.9101C31.2726 25.6475 31.6287 25.5 32 25.5ZM32 39.5C31.6287 39.5 31.2726 39.3525 31.0101 39.0899C30.7475 38.8274 30.6 38.4713 30.6 38.1C30.6 37.7287 30.7475 37.3726 31.0101 37.1101C31.2726 36.8475 31.6287 36.7 32 36.7C32.3713 36.7 32.7274 36.8475 32.9899 37.1101C33.2525 37.3726 33.4 37.7287 33.4 38.1C33.4 38.4713 33.2525 38.8274 32.9899 39.0899C32.7274 39.3525 32.3713 39.5 32 39.5Z" fill="#0BE68D"/>
-                  </g>
-            </svg>
+            <icon-circle-error color="var(--highlight)" [size]="26" />
         </span>
-        <button class="account-verified-address__btn-close" (click)="handleClose()">
-            <i class="fa fa-times"></i>
-        </button>
+       <app-button-close></app-button-close>
     </div>
     <div class="account-verified-address__body">
         <span class="account-verified-address__title">
