adjust: Add icon-circle-exclamation component and update references. Updated `layout.module.ts` to include the new icon component while cleaning up unused imports.

--- a/src/app/shared/layout/modals/account-verified-address/account-verified-address.component.html
+++ b/src/app/shared/layout/modals/account-verified-address/account-verified-address.component.html
@@ -1,7 +1,7 @@
 <div class="account-verified-address">
     <div class="account-verified-address__header">
         <span class="account-verified-address__icon">
-            <icon-circle-error color="var(--highlight)" [size]="26" />
+            <icon-circle-exclamation color="var(--highlight)" [size]="26" />
         </span>
        <app-button-close></app-button-close>
     </div>
