--- a/src/app/shared/layout/modals/account-verification-onboarding/parts/account-verification-document-step/account-verification-document-step.component.html
+++ b/src/app/shared/layout/modals/account-verification-onboarding/parts/account-verification-document-step/account-verification-document-step.component.html
@@ -1,15 +1,16 @@
-<div class="account-verification-document-step" style="display: none;" *ngIf="dataUserCPF">
+<div class="account-verification-document-step" *ngIf="dataUserCPF">
     <div #legitimuz id="legitimuz" *ngIf="showFaceMatchLegitimuz">
-        <input id="legitimuz-hydrate-cpf" [value]="dataUserCPF" />
-        <button id="legitimuz-action-verify"></button>
+        <input type="hidden" id="legitimuz-hydrate-cpf" [value]="dataUserCPF" />
+        <button [hidden]="true" id="legitimuz-action-verify"></button>
         <div id="legitimuz-root"></div>
     </div>
     <div #docCheck id="docCheck" *ngIf="showFaceMatchDocCheck">
-        <button 
+        <button [hidden]="true"
             id="exDocCheckAction"
             [attr.data-ex-doccheck-document]="dataUserCPF"
             [attr.data-ex-doccheck-document-hmac-hash]="secretHash"
-            [attr.data-ex-doccheck-force-enrollment]="false">
+            [attr.data-ex-doccheck-force-enrollment]="true"
+            [attr.data-ex-doccheck-onboarding]="true">
         </button>
     </div>
 </div>
