--- a/src/app/shared/layout/button-close/button-close.component.html
+++ b/src/app/shared/layout/button-close/button-close.component.html
@@ -1,3 +1,3 @@
-<button class="btn-to-cancel" (click)="handleClose()">
+<button class="btn-to-cancel" (click)="handleClick()">
     <icon-close/>
 </button>
