--- a/src/app/shared/layout/modals/information-steps/information-steps.component.html
+++ b/src/app/shared/layout/modals/information-steps/information-steps.component.html
@@ -1,6 +1,6 @@
 <div class="information-steps">
     <div class="information-steps__header">
-        <app-button-close (close)="handleClose()"></app-button-close>
+        <app-button-close (onClick)="onClick()"></app-button-close>
     </div>
     <div class="information-steps__body">
         <span class="information-steps__title">
@@ -17,7 +17,7 @@
         <button
             class="information-steps__action-buton"
             aria-label="Close"
-            (click)="handleClick()"
+            (click)="onClick()"
             *ngIf="hasButton"
         >
            {{ textButton }}
