feat: refactor in account-verification guard

--- a/src/app/shared/layout/modals/account-verification-alert/account-verification-alert.component.html
+++ b/src/app/shared/layout/modals/account-verification-alert/account-verification-alert.component.html
@@ -1,4 +1,4 @@
-<div class="account-verification-alert">
+<div id="account-verification-alert" class="account-verification-alert">
     <div class="account-verification-alert__header">
         <div class="account-verification-alert__banner" *ngIf="hasRegisterBanner">
             <div
