--- a/src/app/shared/layout/modals/account-verified-address/account-verified-address.component.html
+++ b/src/app/shared/layout/modals/account-verified-address/account-verified-address.component.html
@@ -1,4 +1,4 @@
-<div class="account-verified-address">
+<div id="account-verified-address" class="account-verified-address">
     <div class="account-verified-address__header">
         <span class="account-verified-address__icon">
             <icon-circle-exclamation color="var(--highlight)" [size]="26" />
