--- a/src/styles.css
+++ b/src/styles.css
@@ -1622,6 +1622,10 @@ input[type=number]::-webkit-outer-spin-button {
     height: 350px;
 }
 
+.modal-280 .modal-dialog {
+    max-width: 280px;
+}
+
 .modal-375 .modal-dialog {
     max-width: 375px;
 }
@@ -1985,7 +1989,7 @@ label {
 .modal-account-verification,
 .modal-generic {
 
-    z-index: 90002;
+    z-index: 90010;
 }
 
 .modal-account-verified-success {
