--- a/src/app/esportes/futebol/default/listagem/futebol-listagem.component.html
+++ b/src/app/esportes/futebol/default/listagem/futebol-listagem.component.html
@@ -176,7 +176,7 @@
             <div class="search-box" style="flex: 1">
                 <i class="fa fa-search"></i>
                 <input type="text" [(ngModel)]="term"
-                       class="form-control inverted-out"
+                       class="form-control inverted-out personalized-search-label"
                        placeholder="{{'geral.pesquisar' | translate}}"
                        (keyup)="filtrarCampeonatos()"
                        (focusin)="focusPesquisa(true)"
