--- a/src/app/esportes/bilhete/bilhete-esportivo.component.css
+++ b/src/app/esportes/bilhete/bilhete-esportivo.component.css
@@ -160,6 +160,10 @@
     border-top: 2px solid rgba(241, 241, 241, .05);
 }
 
+.personalized-ticket-label {
+    opacity: 1;
+}
+
 .div-inputs {
     padding: 20px 15px 8px 15px;
     /*border-radius: 0.25rem;*/
