--- a/src/app/shared/layout/modals/account-verified-address/account-verified-address.component.scss
+++ b/src/app/shared/layout/modals/account-verified-address/account-verified-address.component.scss
@@ -13,6 +13,9 @@
     &__header {
         display: flex;
         justify-content: space-between;
+        align-items: center;
+        padding-right: 8px;
+        width: 100%;
     }
 
     &__body {
