--- a/src/app/shared/layout/modals/information-steps/information-steps.component.scss
+++ b/src/app/shared/layout/modals/information-steps/information-steps.component.scss
@@ -4,7 +4,15 @@
     justify-content: center;
     align-items: center;
     background-color: var(--header);
-    gap: 67px;
+
+    &__header {
+        display: flex;
+        justify-content: end;
+        align-items: center;
+        padding-top: 21px;
+        padding-right: 24px;
+        width: 100%;
+    }
 
     &__title {
         display: flex;
@@ -21,6 +29,7 @@
         flex-direction: column;
         justify-content: center;
         gap: 32px;
+        padding: 24px 24px 67px 24px;
     }
 
     &__item {
@@ -47,7 +56,7 @@
     }
 
     &__footer {
-        padding-bottom: 24px;
+        padding: 0px 24px 24px 24px;
         width: 100%;
         display: flex;
         justify-content: center;
@@ -72,6 +81,11 @@
     @media only screen and (max-width: 1024px) {
         :host::ng-deep .modal-dialog {
             height: auto !important;
+            margin-top: auto !important;
+            margin-bottom: auto !important;
+            display: flex;
+            align-items: center;
+            min-height: calc(100% - 1rem);
         }
         
     }
