--- a/src/styles.css
+++ b/src/styles.css
@@ -2010,7 +2010,15 @@ label {
         height: 100%;
         margin: 0;
     }
+
+    .modal-generic-centered .modal-dialog {
+        max-width: 100%;
+        max-height: auto !important;
+        height: auto !important;
+        margin: 0;
+    }
 }
+
 
 @media only screen and (max-width: 768px) {
     .modal-account-verified-success .modal-dialog {
