--- a/src/app/shared/layout/modals/account-verified-address/account-verified-address.component.scss
+++ b/src/app/shared/layout/modals/account-verified-address/account-verified-address.component.scss
@@ -1,6 +1,6 @@
 .account-verified-address {
-    background-color: var(--background);
-    color: var(--foreground);
+    background-color: var(--header);
+    color: var(--foreground-header);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -30,7 +30,7 @@
     }
 
     &__title {
-        color: var(--foreground);
+        color: var(--foreground-header);
         font-size: 20px;
         font-style: normal;
         font-weight: 700;
@@ -38,7 +38,7 @@
     }
 
     &__description {
-        color: rgba(var(--foreground-rgb), .7);
+        color: rgba(var(--foreground-header-rgb), .7);
         font-size: 14px;
         font-style: normal;
         font-weight: 400;
