--- a/src/app/shared/layout/modals/account-verification/information-steps/information-steps.component.scss
+++ b/src/app/shared/layout/modals/account-verification/information-steps/information-steps.component.scss
@@ -79,6 +79,10 @@
     }
 
     @media only screen and (max-width: 1024px) {
+        .information-steps {
+            margin: 0 24px;
+        }
+
         :host::ng-deep .modal-dialog {
             height: auto !important;
             margin-top: auto !important;
