--- a/src/app/shared/layout/modals/account-verification/information-steps/information-steps.component.scss
+++ b/src/app/shared/layout/modals/account-verification/information-steps/information-steps.component.scss
@@ -4,13 +4,13 @@
     justify-content: center;
     align-items: center;
     background-color: var(--header);
+    padding: 32px 24px;
+    padding-top: 16px;
 
     &__header {
         display: flex;
         justify-content: end;
         align-items: center;
-        padding-top: 21px;
-        padding-right: 24px;
         width: 100%;
     }
 
@@ -25,11 +25,11 @@
 
     &__body {
         display: flex;
-        max-width: 90%;
         flex-direction: column;
         justify-content: center;
         gap: 32px;
-        padding: 24px 24px 67px 24px;
+        margin-top: 16px;
+        margin-bottom: 58px;
     }
 
     &__item {
@@ -56,7 +56,6 @@
     }
 
     &__footer {
-        padding: 0px 24px 24px 24px;
         width: 100%;
         display: flex;
         justify-content: center;
@@ -69,7 +68,7 @@
         color: var(--highlight);
         border-radius: 4px;
         display: flex;
-        width: 90%;
+        width: 100%;
         height: 40px;
         padding: 8px;
         justify-content: center;
