Fix: Modal addres

--- a/src/styles.css
+++ b/src/styles.css
@@ -940,6 +940,10 @@ button {
     .content-sports {
         padding: 0;
     }
+
+    .modal-information-step-centered .modal-dialog {
+        max-width: max-content !important;
+    }
 }
 
 
