fix: adjust buttons of ticket modal in mobile version

--- a/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.css
+++ b/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.css
@@ -26,6 +26,11 @@
     color: var(--foreground-header) !important;
 }
 
+.grp-buttons-encerramentos {
+    display: flex;
+    padding-bottom: 25px;
+}
+
 .secondary-btn {
     display: flex;
     justify-content: center;
