fix: stylization correction to give the background color of the last access and betting modals in the mobile version

--- a/src/app/shared/layout/modals/last-accesses-modal/last-accesses-modal.component.css
+++ b/src/app/shared/layout/modals/last-accesses-modal/last-accesses-modal.component.css
@@ -151,4 +151,10 @@
     .datepicker-group i {
         right: 15px;
     }
+
+    .table tbody td {
+        background-color: var(--game);
+        color: var(--foreground-game);
+        border-bottom: 1px solid var(--foreground);
+    }
 }
