--- a/src/app/shared/layout/modals/cliente-apostas-modal/cliente-apostas-modal.component.css
+++ b/src/app/shared/layout/modals/cliente-apostas-modal/cliente-apostas-modal.component.css
@@ -95,6 +95,12 @@ h5 {
     border-left: 10px solid #ED4C5C;
 }
 
+.table td.no-border i {
+    background-color: transparent;
+    color: var(--highlight);
+    border-left: 0 !important;
+}
+
  .group-input-valor {
     text-align: center;
 }
@@ -221,7 +227,7 @@ h5 {
     cursor: pointer;
 }
 
- @media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1024px) {
     #default-content {
         padding: 20px;
         background: var(--background);
@@ -239,4 +245,10 @@ h5 {
         border-bottom: 0 !important;
         padding-bottom: 5px;
     }
- }
+
+    .table tbody td {
+        background-color: var(--game);
+        color: var(--foreground-game);
+        border-bottom: 1px solid var(--foreground);
+    }
+}
