adjust: stylization adjustment in the betting data display table

--- a/src/app/shared/layout/modals/cliente-apostas-modal/cliente-apostas-modal.component.css
+++ b/src/app/shared/layout/modals/cliente-apostas-modal/cliente-apostas-modal.component.css
@@ -251,4 +251,10 @@ h5 {
         color: var(--foreground-game);
         border-bottom: 1px solid var(--foreground);
     }
+
+    .acoes-aposta {
+        height: 50px;
+        display: flex;
+        align-items: center;
+    }
 }
